install:
	mkdir -p ${prefix}/utilities
	mkdir -p ${prefix}/utilities/pycvm/
	mkdir -p ${prefix}/utilities/pycvm/pycvm
	cp -R *.py ${prefix}/utilities
	chmod +x ${prefix}/utilities/*.py
	cp -R pycvm/*.py ${prefix}/utilities/pycvm/
	chmod +x ${prefix}/utilities/*.py
	cp -R pycvm/pycvm/*.py ${prefix}/utilities/pycvm/pycvm/
	chmod +x ${prefix}/utilities/pycvm/pycvm/*.py

clean:
	echo ""
